[metadata]
name = pyramid_health
version = 0.3.0
summary = Pyramid health
description-file = README.txt
requires-dist =
	pyramid

[files]
packages =
	pyramid_health

[noah]
public = 1

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_health
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1

