[metadata]
name = pyramid_health
version = 1.2.1.dev0
summary = Healthcheck extension for Pyramid
author = Pior Bastida
author-email = pbastida@ludia.com
home-page = https://github.com/ludia/pyramid_health
description-file = README.rst
requires-dist = 
	pyramid

[files]
packages = 
	pyramid_health

[noah]
public = 1

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_health
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1

